<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/drawer_menu" />
        <item
            android:id="@+id/nav_myorder"
            android:icon="@drawable/logolist"
            android:title="@string/drawer_myorder" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/logolocation"
            android:title="@string/drawer_restaurants" />
        <item
            android:id="@+id/nav_bsbExperience"
            android:icon="@drawable/logovaloracion"
            android:title="@string/drawer_experience" />
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/logokitchen"
            android:title="@string/drawer_kitchen" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/logosetting"
            android:title="@string/drawer_setting" />

    </group>
</menu>