<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_logoBsb"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logobsbred"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:hint="@string/login_email_hint"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logoBsb"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logIn_et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/nexa_bold"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:gravity="top"
        android:hint="@string/login_password_hint"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logIn_et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/nexa_bold"
            android:inputType="textPassword"
            android:textColor="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/logIn_txt_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nexa_bold"
        android:text="@string/login_forgot_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logIn_btn_entry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/nexa_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/login_entry"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn_txt_forgotPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logIn_btn_checkIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/nexa_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/login_checkin"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn_btn_entry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn_google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/login_btn"
        android:drawableLeft="@drawable/logogoogle"
        android:fontFamily="@font/nexa_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/login_google"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn_btn_checkIn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/login_btn"
        android:drawableLeft="@drawable/logofacebook"
        android:fontFamily="@font/nexa_bold"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/login_facebook"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn_google" />

</androidx.constraintlayout.widget.ConstraintLayout>